<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QuicMic</string>

    <string name="status_idle">Idle</string>
    <string name="start">Start</string>
    <string name="mute">Mute</string>
    <string name="pair">Pair</string>
    <string name="files">Files</string>
    <string name="settings">Settings</string>
    <string name="unpair">Unpair</string>
    <string name="listen_to_pc">Listen to PC speaker</string>
    <string name="bluetooth_earbuds">Bluetooth earbuds (SCO)</string>

    <string name="scan_qr">Scan QR code</string>
    <string name="or_enter_manually">…or enter the details manually:</string>
    <string name="hint_host">PC address, e.g. 192.168.1.42</string>
    <string name="hint_port">Port (8443)</string>
    <string name="hint_pin">6-digit PIN</string>
    <string name="fetch_identity">Fetch server identity</string>
    <string name="confirm_pair">Confirm &amp; Pair</string>

    <string name="device_name_label">Device name (shown on the PC)</string>
    <string name="gate_label">Noise gate threshold</string>
    <string name="gain_label">Gain</string>
    <string name="save">Save</string>
</resources>
